--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width:100%;
     height:100vh;
-    background-image:url(images/bg.png);
+    background-image:url(../images/bg.png);
     background-size:cover ;
     background-position: center;
 
@@ -173,7 +173,7 @@ font-size: 14px;
 }
 
 .projects-list div h2{
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 500;
     margin-bottom: 15px;
 }
